Fixed right sidebar panel left spacing

--- a/src/styles/sass/andromeda/doc-mgt/_styles.scss
+++ b/src/styles/sass/andromeda/doc-mgt/_styles.scss
@@ -172,6 +172,7 @@ $search-expanded-width: 400px;
   
   .sidebar-details{
     padding: 0 20px;
+    margin-left: 20px;
   }
   
   .fixed-title{
